# digital-human-assistant

./: .gitignore  LICENSE  README.md  index.html  install_shortcut.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  secrets.json.example  start_kylin.sh  start_windows.bat  vite.config.js
backend/: CONTENT_FILTER.md  content_filter.py  filter_config.json.example  llm.py  main.py  requirements.txt  sensitive_lexicon_loader.py  verify_keywords.py  volc_asr.py  volc_protocol.py  volc_realtime.py  volc_realtime_protocol.py  volc_tts.py
backend/Wav2Lip/: inference.py  inference_v2.py
backend/checkpoints/: README.md
src/components/: DigitalHuman.vue
src/views/: Admin.vue  Home.vue
