[project]
name = "digital-human-backend"
version = "0.1.0"
description = "Digital Human Backend powered by Wav2Lip and EdgeTTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "aiofiles>=23.0.0",
    "requests>=2.28.0",
    "edge-tts>=6.1.5",
    "librosa==0.9.2",
    "soundfile>=0.12.1",
    "opencv-python>=4.7.0",
    "numpy<2.0.0",
    "pillow>=9.5.0",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "tqdm>=4.65.0",
    "zstandard>=0.23.0",
]

[tool.uv]
# Optimization for faster resolution
# resolution = "lowest-direct" 

# Add Aliyun Mirror for faster PyPI downloads in China
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Use CPU version of PyTorch by default for maximum compatibility across Windows/Linux/ARM
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
